tests/transpiler/x/fs/python_math.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/python_math.fs(20,1): error FS0010: Unexpected start of structured construct in definition. Expected '=' or other token.
